# ximera-pandoc-filter

./: README.md  git-mongo-test.cabal  pandocLatexFilter.hs  tikz-template.tex  ximera-pandoc-filter.cabal
