-- The name of the package.
name:                ximera-pandoc-filter

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:            

-- A longer description of the package.
-- description:         

-- The license under which the package is released.
-- license:             

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Corey Staten

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:          corey.staten@gmail.com

-- A copyright notice.
-- copyright:           

-- category:            

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a 
-- README.
extra-source-files:  README.md

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10


executable ximera-pandoc-filter
  -- .hs or .lhs file containing the Main module.
  main-is: pandocLatexFilter.hs    
  
  -- Modules included in this executable, other than Main.
  -- other-modules:       
  
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:    
  
  -- Other library packages from which modules are imported.
  build-depends:       base >=4.5,
                       pandoc >= 1.12.2.1,
                       pandoc-types >= 1.12.3,
                       temporary >= 1.1,
                       process >= 1.0.1.1,
                       directory >= 1.0.1.2,
                       mongoDB >= 1.4.1.1,
                       hashable >= 1.2.1.0,
                       text >= 0.11.3.1,
                       filepath >= 1.3.0.1,
                       aeson >= 0.6.2.1,
                       bytestring >= 0.9.2.1,
                       containers >= 0.4.2.1,
                       uuid >= 1.3.3,
                       regex-pcre-builtin >= 0.94.2

  
  -- Directories containing source files.
  -- hs-source-dirs:      
  
  -- Base language which the package is written in.
  default-language:    Haskell2010
  
